--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@
 
                             <div>
                                 <h3 class="qualification__title">Títol Expert Analista Dades per a l’Anàlisi Política i la Gestió Pública</h3>
-                                <span class="qualification__subtitle">Universitat de Barcelona (UAB)</span>
+                                <span class="qualification__subtitle">Universitat de Barcelona (UB)</span>
                                 <div class="qualification__calendar">
                                     <i class="uil uil-calendar-alt"></i>
                                     2019 - 2020
